--- a/ordernow/frontend/package.json
+++ b/ordernow/frontend/package.json
@@ -10,6 +10,7 @@
     "start": "vite"
   },
   "dependencies": {
+    "@tailwindcss/vite": "^4.0.13",
     "axios": "^1.7.9",
     "ordernow": "file:",
     "react": "^19.0.0",
@@ -27,6 +28,7 @@
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.18",
     "globals": "^15.14.0",
+    "tailwindcss": "^3.4.17",
     "vite": "^6.1.0"
   }
 }
